# libva_wrapper

./: AUTHORS  README.md  configure.ac
src/: Makefile.am  list.h  wrapper_drv_video.c  wrapper_drv_video.h
